# Employee-HRM

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.docker  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/core/: __init__.py  auth.py  dependencies.py
backend/app/exceptions/: __init__.py  exceptions.py
backend/app/models/: __init__.py  department.py  employee.py  position.py  user.py
backend/app/routes/: __init__.py  auth.py  departments.py  employees.py  positions.py  user.py
backend/app/schema/: __init__.py  auth.py  department.py  employee.py  position.py  user.py
backend/app/services/: __init__.py  departments.py  employee.py  positions.py  user.py
backend/tests/: test_routes.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminRoute.jsx  EditEmployeeModal.jsx  EditEmployeePropsModal.jsx  EditResourceModal.jsx  Navbar.jsx  NewResourceModal.jsx  ProtectedRoute.jsx  PublicOnlyRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Departments.jsx  Employees.jsx  Home.jsx  Login.jsx  NewEmployee.jsx  Positions.jsx  Register.jsx  Users.jsx
frontend/src/services/: api.js
